feat: edicao de imaagem

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -111,6 +111,10 @@ main .form-check-input:checked {
     border: 1px solid var(--purple);
 }
 
+#divRes {
+    display: none;
+}
+
 .imgRes {
     width: 500px;
     z-index: 10;
